--- a/pages/index.html
+++ b/pages/index.html
@@ -8,8 +8,14 @@
     <meta name="keywords" content="" />
     <meta name="description" content="" />
 
+    <link rel="stylesheet" href="../style/common.v2.css" />
+
     <link rel="stylesheet" href="../dist/base.ec1efe0be8849e77c77d.css" />
     <link rel="stylesheet" href="../dist/index.ec1efe0be8849e77c77d.css" />
+
+    <link rel="stylesheet" href="../blocks/social-intro/social-intro.v8.css" />
+    <link rel="stylesheet" href="../blocks/intro/intro.v2.css" />
+
     <script defer src="../dist/base.ec1efe0be8849e77c77d.js"></script>
     <script defer src="../dist/index.ec1efe0be8849e77c77d.js"></script>
     <script defer src="../dist/culc.ec1efe0be8849e77c77d.js"></script>
@@ -237,167 +243,45 @@
             <p class="intro__uppertitle">SMM-накрутка в социальных сетях</p>
             <h1 class="section-title intro__title">
               Имитируй органический рост в соцсетях
-              <div class="intro__socials-container">
-                <ul class="intro__socials">
-                  <li class="intro__social">
-                    <img
-                      class="intro__social-logo"
-                      src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/facebook-icon.svg"
-                      alt="Фейсбук"
-                    />
-                  </li>
-                  <li class="intro__social">
-                    <img
-                      class="intro__social-logo"
-                      src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/internet-icon.svg"
-                      alt="Интернет"
-                    />
-                  </li>
-                  <li class="intro__social">
-                    <img
-                      class="intro__social-logo"
-                      src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/ok-icon.svg"
-                      alt="Одноклассники"
-                    />
-                  </li>
-                  <li class="intro__social">
-                    <img
-                      class="intro__social-logo"
-                      src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/soundcloud-icon.svg"
-                      alt="Саундклауд"
-                    />
-                  </li>
-                  <li class="intro__social">
-                    <img
-                      class="intro__social-logo"
-                      src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/spotify-icon.svg"
-                      alt="Спотифай"
-                    />
-                  </li>
-                  <li class="intro__social">
-                    <img
-                      class="intro__social-logo"
-                      src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/telegram-icon.svg"
-                      alt="Телеграм"
-                    />
-                  </li>
-                  <li class="intro__social">
-                    <img
-                      class="intro__social-logo"
-                      src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/vk-icon.svg"
-                      alt="Вконтакте"
-                    />
-                  </li>
-                  <li class="intro__social">
-                    <img
-                      class="intro__social-logo"
-                      src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/tiktok-icon.svg"
-                      alt="Тикток"
-                    />
-                  </li>
-                  <li class="intro__social">
-                    <img
-                      class="intro__social-logo"
-                      src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/instagram-icon.svg"
-                      alt="Инстаграм"
-                    />
-                  </li>
-                  <li class="intro__social">
-                    <img
-                      class="intro__social-logo"
-                      src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/twitter-icon.svg"
-                      alt="Твиттер"
-                    />
-                  </li>
-                  <li class="intro__social">
-                    <img
-                      class="intro__social-logo"
-                      src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/youtube-icon.svg"
-                      alt="Ютуб"
-                    />
-                  </li>
-                </ul>
-                <ul aria-hidden="true" class="intro__socials">
-                  <li class="intro__social">
-                    <img
-                      class="intro__social-logo"
-                      src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/facebook-icon.svg"
-                      alt="Фейсбук"
-                    />
-                  </li>
-                  <li class="intro__social">
-                    <img
-                      class="intro__social-logo"
-                      src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/internet-icon.svg"
-                      alt="Интернет"
-                    />
-                  </li>
-                  <li class="intro__social">
-                    <img
-                      class="intro__social-logo"
-                      src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/ok-icon.svg"
-                      alt="Одноклассники"
-                    />
-                  </li>
-                  <li class="intro__social">
-                    <img
-                      class="intro__social-logo"
-                      src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/soundcloud-icon.svg"
-                      alt="Саундклауд"
-                    />
-                  </li>
-                  <li class="intro__social">
-                    <img
-                      class="intro__social-logo"
-                      src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/spotify-icon.svg"
-                      alt="Спотифай"
-                    />
-                  </li>
-                  <li class="intro__social">
-                    <img
-                      class="intro__social-logo"
-                      src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/telegram-icon.svg"
-                      alt="Телеграм"
-                    />
-                  </li>
-                  <li class="intro__social">
-                    <img
-                      class="intro__social-logo"
-                      src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/vk-icon.svg"
-                      alt="Вконтакте"
-                    />
-                  </li>
-                  <li class="intro__social">
-                    <img
-                      class="intro__social-logo"
-                      src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/tiktok-icon.svg"
-                      alt="Тикток"
-                    />
-                  </li>
-                  <li class="intro__social">
-                    <img
-                      class="intro__social-logo"
-                      src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/instagram-icon.svg"
-                      alt="Инстаграм"
-                    />
-                  </li>
-                  <li class="intro__social">
-                    <img
-                      class="intro__social-logo"
-                      src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/twitter-icon.svg"
-                      alt="Твиттер"
-                    />
-                  </li>
-                  <li class="intro__social">
-                    <img
-                      class="intro__social-logo"
-                      src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/youtube-icon.svg"
-                      alt="Ютуб"
-                    />
-                  </li>
-                </ul>
-              </div>
             </h1>
+            <ul class="social-intro__social-grid">
+              <li class="social-intro__social-grid-item">
+                <img
+                  src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/telegram-icon.svg"
+                  alt="Телеграм"
+                />
+              </li>
+              <li class="social-intro__social-grid-item">
+                <img
+                  src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/vk-icon.svg"
+                  alt="Вконтакте"
+                />
+              </li>
+              <li class="social-intro__social-grid-item">
+                <img
+                  src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/tiktok-icon.svg"
+                  alt="Тикток"
+                />
+              </li>
+              <li class="social-intro__social-grid-item">
+                <img
+                  src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/instagram-icon.svg"
+                  alt="Инстаграм"
+                />
+              </li>
+              <li class="social-intro__social-grid-item">
+                <img
+                  src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/youtube-icon.svg"
+                  alt="Ютуб"
+                />
+              </li>
+              <li class="social-intro__social-grid-item">
+                <img
+                  src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/ok-icon.svg"
+                  alt="Одноклассники"
+                />
+              </li>
+            </ul>
             <p class="text intro__text">
               С помощью умной комплексной накрутки*, которую не видно в
               статистике
@@ -1809,7 +1693,11 @@
           </a>
         </div>
         <div class="footer__section footer__section_type_up">
-          <a aria-label="Вернуться в начало" href="#" class="footer__link-up"></a>
+          <a
+            aria-label="Вернуться в начало"
+            href="#"
+            class="footer__link-up"
+          ></a>
         </div>
         <div class="footer__section footer__section_type_company">
           <a
