--- a/pages/index.html
+++ b/pages/index.html
@@ -277,6 +277,18 @@
               </li>
               <li class="social-intro__social-grid-item">
                 <img
+                  src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/facebook-icon.svg"
+                  alt="Фейсбук"
+                />
+              </li>
+              <li class="social-intro__social-grid-item">
+                <img
+                  src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/twitter-icon.svg"
+                  alt="Твитте"
+                />
+              </li>
+              <li class="social-intro__social-grid-item">
+                <img
                   src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/ok-icon.svg"
                   alt="Одноклассники"
                 />
