--- a/pages/telegram.html
+++ b/pages/telegram.html
@@ -261,40 +261,60 @@
               </p>
               <ul class="social-intro__social-grid">
                 <li class="social-intro__social-grid-item">
-                  <img
-                    src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/telegram-icon.svg"
-                    alt="Телеграм"
-                  />
+                  <a href="/telegram">
+                    <img
+                      src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/telegram-icon.svg"
+                      alt="Телеграм"
+                  /></a>
                 </li>
                 <li class="social-intro__social-grid-item">
-                  <img
-                    src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/vk-icon.svg"
-                    alt="Вконтакте"
-                  />
+                  <a href="/vkontakte"
+                    ><img
+                      src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/vk-icon.svg"
+                      alt="Вконтакте"
+                  /></a>
                 </li>
                 <li class="social-intro__social-grid-item">
-                  <img
-                    src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/tiktok-icon.svg"
-                    alt="Тикток"
-                  />
+                  <a href="/tiktok"
+                    ><img
+                      src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/tiktok-icon.svg"
+                      alt="Тикток"
+                  /></a>
                 </li>
                 <li class="social-intro__social-grid-item">
-                  <img
-                    src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/instagram-icon.svg"
-                    alt="Инстаграм"
-                  />
+                  <a href="/instagram"
+                    ><img
+                      src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/instagram-icon.svg"
+                      alt="Инстаграм"
+                  /></a>
                 </li>
                 <li class="social-intro__social-grid-item">
-                  <img
-                    src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/youtube-icon.svg"
-                    alt="Ютуб"
-                  />
+                  <a href="/youtube"
+                    ><img
+                      src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/youtube-icon.svg"
+                      alt="Ютуб"
+                  /></a>
                 </li>
                 <li class="social-intro__social-grid-item">
-                  <img
-                    src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/ok-icon.svg"
-                    alt="Одноклассники"
-                  />
+                  <a href="/fecabook"
+                    ><img
+                      src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/facebook-icon.svg"
+                      alt="Фейсбук"
+                  /></a>
+                </li>
+                <li class="social-intro__social-grid-item">
+                  <a href="/services"
+                    ><img
+                      src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/twitter-icon.svg"
+                      alt="Твитте"
+                  /></a>
+                </li>
+                <li class="social-intro__social-grid-item">
+                  <a href="/services"
+                    ><img
+                      src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/ok-icon.svg"
+                      alt="Одноклассники"
+                  /></a>
                 </li>
               </ul>
               <a
