--- a/pages/index.html
+++ b/pages/index.html
@@ -10,15 +10,12 @@
 
     <link rel="stylesheet" href="../style/common.v2.css" />
 
-    <link rel="stylesheet" href="../dist/base.ec1efe0be8849e77c77d.css" />
-    <link rel="stylesheet" href="../dist/index.ec1efe0be8849e77c77d.css" />
+    <link rel="stylesheet" href="../dist/base.022042cbed0e401f8600.css" />
+    <link rel="stylesheet" href="../dist/index.022042cbed0e401f8600.css" />
 
-    <link rel="stylesheet" href="../blocks/social-intro/social-intro.v8.css" />
-    <link rel="stylesheet" href="../blocks/intro/intro.v2.css" />
-
-    <script defer src="../dist/base.ec1efe0be8849e77c77d.js"></script>
-    <script defer src="../dist/index.ec1efe0be8849e77c77d.js"></script>
-    <script defer src="../dist/culc.ec1efe0be8849e77c77d.js"></script>
+    <script defer src="../dist/base.022042cbed0e401f8600.js"></script>
+    <script defer src="../dist/index.022042cbed0e401f8600.js"></script>
+    <script defer src="../dist/culc.022042cbed0e401f8600.js"></script>
 
     <title>Главная</title>
   </head>
@@ -244,57 +241,57 @@
             <h1 class="section-title intro__title">
               Имитируй органический рост в соцсетях
             </h1>
-            <ul class="social-intro__social-grid">
-              <li class="social-intro__social-grid-item">
+            <ul class="intro__social-grid">
+              <li class="intro__social-grid-item">
                 <a href="/telegram">
                   <img
                     src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/telegram-icon.svg"
                     alt="Телеграм"
                 /></a>
               </li>
-              <li class="social-intro__social-grid-item">
+              <li class="intro__social-grid-item">
                 <a href="/vkontakte"
                   ><img
                     src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/vk-icon.svg"
                     alt="Вконтакте"
                 /></a>
               </li>
-              <li class="social-intro__social-grid-item">
+              <li class="intro__social-grid-item">
                 <a href="/tiktok"
                   ><img
                     src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/tiktok-icon.svg"
                     alt="Тикток"
                 /></a>
               </li>
-              <li class="social-intro__social-grid-item">
+              <li class="intro__social-grid-item">
                 <a href="/instagram"
                   ><img
                     src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/instagram-icon.svg"
                     alt="Инстаграм"
                 /></a>
               </li>
-              <li class="social-intro__social-grid-item">
+              <li class="intro__social-grid-item">
                 <a href="/youtube"
                   ><img
                     src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/youtube-icon.svg"
                     alt="Ютуб"
                 /></a>
               </li>
-              <li class="social-intro__social-grid-item">
+              <li class="intro__social-grid-item">
                 <a href="/fecabook"
                   ><img
                     src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/facebook-icon.svg"
                     alt="Фейсбук"
                 /></a>
               </li>
-              <li class="social-intro__social-grid-item">
+              <li class="intro__social-grid-item">
                 <a href="/services"
                   ><img
                     src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/twitter-icon.svg"
                     alt="Твитте"
                 /></a>
               </li>
-              <li class="social-intro__social-grid-item">
+              <li class="intro__social-grid-item">
                 <a href="/services"
                   ><img
                     src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/ok-icon.svg"
