add download-app page

--- a/pages/download-app.html
+++ b/pages/download-app.html
@@ -391,7 +391,7 @@
                     class="download-app__video"
                     allow="autoplay"
                     controls
-                    src="../video/download-app-ios.mp4"
+                    src="../video/download-app-ios.mp4#t=0.1"
                   ></video>
                 </div>
               </div>
@@ -431,7 +431,7 @@
                     class="download-app__video"
                     allow="autoplay"
                     controls
-                    src="../video/download-app-android.mp4"
+                    src="../video/download-app-android.mp4#t=0.1"
                   ></video>
                 </div>
               </div>
