added categories filter

--- a/pages/neworder.html
+++ b/pages/neworder.html
@@ -10,8 +10,9 @@
 
     <link rel="stylesheet" href="../style/common.v2.css" />
 
-    <link rel="stylesheet" href="../dist/base.bc883e050ab3b4263487.css" />
-    <link rel="stylesheet" href="../dist/index.bc883e050ab3b4263487.css" />
+    <link rel="stylesheet" href="../dist/base.01adf93fbb827865ec05.css" />
+    <link rel="stylesheet" href="../dist/index.01adf93fbb827865ec05.css" />
+    <link rel="stylesheet" href="../styles/neworder.css" />
 
     <script type="module" src="../scripts/pages/neworder.js"></script>
 
@@ -232,27 +233,153 @@
       </nav>
     </header>
     <main class="content">
-      <section class="intro intro_bg_gradient">
+      <section>
         <div class="platform-btn-container">
-          <button class="platform-btn" type="button" data-social="Telegram">
-            <img
-              class="header__social-logo"
-              src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/vk-icon.svg"
-              alt="Вконтакте"
-            />
-            <span>Telegram</span>
-          </button>
-          <button class="platform-btn" type="button" data-social="Вконтакте">
-            <img
-              class="header__social-logo"
-              src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/vk-icon.svg"
-              alt="Вконтакте"
-            />
-            <span>Вконтакте</span>
-          </button>
           <button class="platform-btn" type="button" data-social="">
-            <span>Telegram</span>
-            <span>Сбросить</span>
+            <img
+              class="header__social-logo"
+              src="https://cdn.rawgit.com/bread2077/temp/main/images/default-icons/burger-icon.svg"
+              alt="Вконтакте"
+            />
+            <span class="platform-btn__text">Все услуги</span>
+          </button>
+          <button
+            class="platform-btn"
+            type="button"
+            data-social="Telegram|Телеграм"
+            data-social-main
+          >
+            <img
+              class="header__social-logo"
+              src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/telegram-icon.svg"
+              alt="Вконтакте"
+            />
+            <span class="platform-btn__text">Telegram</span>
+          </button>
+          <button
+            class="platform-btn"
+            type="button"
+            data-social="Instagram"
+            data-social-main
+          >
+            <img
+              class="header__social-logo"
+              src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/instagram-icon.svg"
+              alt="Вконтакте"
+            />
+            <span class="platform-btn__text">Instagram</span>
+          </button>
+          <button
+            class="platform-btn"
+            type="button"
+            data-social="Вконтакте"
+            data-social-main
+          >
+            <img
+              class="header__social-logo"
+              src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/vk-icon.svg"
+              alt="Вконтакте"
+            />
+            <span class="platform-btn__text">Вконтакте</span>
+          </button>
+          <button
+            class="platform-btn"
+            type="button"
+            data-social="Tiktok"
+            data-social-main
+          >
+            <img
+              class="header__social-logo"
+              src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/tiktok-icon.svg"
+              alt="Вконтакте"
+            />
+            <span class="platform-btn__text">Tiktok</span>
+          </button>
+          <button
+            class="platform-btn"
+            type="button"
+            data-social="Youtube"
+            data-social-main
+          >
+            <img
+              class="header__social-logo"
+              src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/youtube-icon.svg"
+              alt="Вконтакте"
+            />
+            <span class="platform-btn__text">Youtube</span>
+          </button>
+          <button
+            class="platform-btn"
+            type="button"
+            data-social="Twitch"
+            data-social-main
+          >
+            <img
+              class="header__social-logo"
+              src="https://storage2.perfectcdn.com/6b0a4d/0org4elfchtb9l41.png"
+              alt="Вконтакте"
+            />
+            <span class="platform-btn__text">Twitch</span>
+          </button>
+          <button
+            class="platform-btn"
+            type="button"
+            data-social="Twitter"
+            data-social-main
+          >
+            <img
+              class="header__social-logo"
+              src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/x-icon.svg"
+              alt="Вконтакте"
+            />
+            <span class="platform-btn__text">Twitter/X</span>
+          </button>
+          <button
+            class="platform-btn"
+            type="button"
+            data-social="Facebook"
+            data-social-main
+          >
+            <img
+              class="header__social-logo"
+              src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/facebook-icon.svg"
+              alt="Вконтакте"
+            />
+            <span class="platform-btn__text">Facebook</span>
+          </button>
+          <button
+            class="platform-btn"
+            type="button"
+            data-social="Рутуб"
+            data-social-main
+          >
+            <img
+              class="header__social-logo"
+              src="https://storage2.perfectcdn.com/6b0a4d/k2lm0y8tz1j0fhm5.png"
+              alt="Вконтакте"
+            />
+            <span class="platform-btn__text">Рутуб</span>
+          </button>
+          <button
+            class="platform-btn"
+            type="button"
+            data-social="MAX"
+            data-social-main
+          >
+            <img
+              class="header__social-logo"
+              src="https://cdn.rawgit.com/bread2077/temp/main/images/socials/max-icon.png"
+              alt="Вконтакте"
+            />
+            <span class="platform-btn__text">MAX</span>
+          </button>
+          <button class="platform-btn" type="button" data-social="other">
+            <img
+              class="header__social-logo"
+              src="https://cdn.rawgit.com/bread2077/temp/main/images/default-icons/plus-icon.svg"
+              alt="Вконтакте"
+            />
+            <span class="platform-btn__text">Другое</span>
           </button>
         </div>
         <select
