fix categories filter

--- a/pages/neworder.html
+++ b/pages/neworder.html
@@ -10,11 +10,11 @@
 
     <link rel="stylesheet" href="../style/common.v2.css" />
 
-    <link rel="stylesheet" href="../dist/base.01adf93fbb827865ec05.css" />
-    <link rel="stylesheet" href="../dist/index.01adf93fbb827865ec05.css" />
-    <link rel="stylesheet" href="../styles/neworder.css" />
+    <link rel="stylesheet" href="../dist/base.a7f5c5fa778c37956b4d.css" />
+    <link rel="stylesheet" href="../dist/index.a7f5c5fa778c37956b4d.css" />
+    <link rel="stylesheet" href="../dist/neworder.a7f5c5fa778c37956b4d.css" />
 
-    <script type="module" src="../scripts/pages/neworder.js"></script>
+    <script defer src="../dist/neworder.a7f5c5fa778c37956b4d.js"></script>
 
     <title>Главная</title>
   </head>
