fix categories filter styles

--- a/pages/neworder.html
+++ b/pages/neworder.html
@@ -12,9 +12,8 @@
 
     <link rel="stylesheet" href="../dist/base.a7f5c5fa778c37956b4d.css" />
     <link rel="stylesheet" href="../dist/index.a7f5c5fa778c37956b4d.css" />
-    <link rel="stylesheet" href="../dist/neworder.a7f5c5fa778c37956b4d.css" />
-
-    <script defer src="../dist/neworder.a7f5c5fa778c37956b4d.js"></script>
+    <link rel="stylesheet" href="../styles/neworder.css" />
+    <script type="module" src="../scripts/pages/neworder.js"></script>
 
     <title>Главная</title>
   </head>
@@ -233,7 +232,7 @@
       </nav>
     </header>
     <main class="content">
-      <section>
+      <section style="padding: 40px 20px">
         <div class="platform-btn-container">
           <button class="platform-btn" type="button" data-social="">
             <img
@@ -382,7 +381,7 @@
             <span class="platform-btn__text">Другое</span>
           </button>
         </div>
-        <select
+        <!--<select
           id="orderform-category"
           name="OrderForm[category]"
           class="select_card select_card_type_category select_card__height"
@@ -896,7 +895,7 @@
             MAX
           </option>
           <option value="0" data-icon="">Другое</option>
-        </select>
+        </select>-->
       </section>
     </main>
     <footer class="footer">
