--- a/pages/neworder.html
+++ b/pages/neworder.html
@@ -10,8 +10,8 @@
 
     <link rel="stylesheet" href="../style/common.v2.css" />
 
-    <link rel="stylesheet" href="../dist/base.a7f5c5fa778c37956b4d.css" />
-    <link rel="stylesheet" href="../dist/index.a7f5c5fa778c37956b4d.css" />
+    <link rel="stylesheet" href="../dist/base.13122e15fb5cd5a6ed83.css" />
+    <link rel="stylesheet" href="../dist/index.13122e15fb5cd5a6ed83.css" />
     <link rel="stylesheet" href="../styles/neworder.css" />
     <script type="module" src="../scripts/pages/neworder.js"></script>
 
@@ -381,7 +381,7 @@
             <span class="platform-btn__text">Другое</span>
           </button>
         </div>
-        <!--<select
+        <select
           id="orderform-category"
           name="OrderForm[category]"
           class="select_card select_card_type_category select_card__height"
@@ -895,7 +895,7 @@
             MAX
           </option>
           <option value="0" data-icon="">Другое</option>
-        </select>-->
+        </select>
       </section>
     </main>
     <footer class="footer">
